--- a/trunk/mobile_portal/mobile_portal/templates/core/contact.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/contact.xhtml
@@ -23,7 +23,7 @@
 
 <div class="section">
 
-  <dl class="feedback">
+  <dl class="form">
     <dt>{{ contact_form.email.label}}:</dt>
 {% if contact_form.email.errors %}
     <dd>{{ contact_form.email.errors.0 }}</dd>
