--- a/trunk/mobile_portal/mobile_portal/templates/core/messages.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/messages.xhtml
@@ -7,7 +7,7 @@
 
 {% if formset.forms %}
 <div class="section">
-  <h2 class="section-header">Messages from the developers</h2>
+  <h2>Messages from the developers</h2>
   <div class="note"><div class="bubble pad-10">
     The developers would like to thank you for using Mobile Oxford,
     and would like to ask your help in making it better.
@@ -48,7 +48,7 @@
 {% else %}
 
 <div class="section">
-  <h2 class="section-header">Messages from the developers</h2>
+  <h2>Messages from the developers</h2>
   <div class="note"><div class="bubble pad-10">
     You have no messages
   </div></div>
