--- a/trunk/mobile_portal/mobile_portal/templates/core/update_location.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/update_location.xhtml
@@ -2,7 +2,7 @@
 
 <div class="section-nopad tab" id="tab-auto">
 
-<h2 class="section-header">Automatic geolocation</h2>
+<h2>Automatic geolocation</h2>
 <div class="section-content">
 {% if preferences.location.placemark %}
         <p id="location_status">We think you are somewhere near <strong class="nobr">{{ preferences.location.placemark.0 }}</strong> ({{ preferences.location.location.0 }} {{ preferences.location.location.1 }}).</p>
@@ -31,7 +31,7 @@
 
 <div class="section-nopad tab" id="tab-manual">
 
-<h2 class="section-header">Update location manually</h2>
+<h2>Update location manually</h2>
 
 <div class="section-content"><div class="bubble">Examples: 'oucs' (a unit code), 'Trinity College' (a college or department), 'Parks Road' (an address), 'OX1 3PG' (a postcode).</div></div>
 
