--- a/trunk/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/busstop.xhtml
@@ -27,7 +27,7 @@
 {% block content %}
 
 <div class="section">
-	<h2 class="section-header"><small>{{ entity.title }}<br /><span id="time_now">{% now "G:i:s "%}</span></small></h2>
+	<h2><small>{{ entity.title }}<br /><span id="time_now">{% now "G:i:s "%}</span></small></h2>
 
 	
 {% if services %}
