--- a/trunk/mobile_portal/mobile_portal/templates/maps/update_osm.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/update_osm.xhtml
@@ -20,7 +20,7 @@
 {% block content %}
 
 <div class="section-nopad">
-  <h2 class="section-header">Important information</h2>
+  <h2>Important information</h2>
   
   <div class="section-content" style="text-align:left;">
     <p>
@@ -55,7 +55,7 @@
 </div>
 
 <div class="section-nopad">
-  <h2 class="section-header">Map</h2>
+  <h2>Map</h2>
   <div class="list-note"><div class="bubble">
     You are submitting an update to the {{ entity.entity_type.verbose_name }}
     <em>&quot;{{ entity.title }}&quot;</em>.
