--- a/trunk/mobile_portal/mobile_portal/templates/static/openstreetmap.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/static/openstreetmap.xhtml
@@ -1,5 +1,5 @@
 <div class="section-nopad">
-  <h2 class="section-header">OpenStreetMap</h2>
+  <h2>OpenStreetMap</h2>
 
   <div class="section-content">
     <p>
