--- a/trunk/mobile_portal/mobile_portal/templates/z3950/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/z3950/index.xhtml
@@ -8,7 +8,7 @@
 {% include "z3950/search_form.xhtml" %}
         
 <div class="section">
-    <h2 class="section-header">Maps</h2>
+    <h2>Maps</h2>
 	<div class="note">
 		{% if preferences.location.location %}
 		<div class="bubble pad-10">
@@ -25,7 +25,7 @@
 </div>
 
 <div class="section">
-    <h2 class="section-header">Library Services Info</h2>
+    <h2>Library Services Info</h2>
     <ul>
         <li><a class="email" href="mailto:reader.services@ouls.ox.ac.uk">E-mail<br/>
 	        <small>reader.services@ouls.ox.ac.uk</small></a></li>
