--- a/trunk/mobile_portal/mobile_portal/templates/z3950/item_list.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/z3950/item_list.xhtml
@@ -24,7 +24,7 @@
 
 {% if page %}
 <div class="list-section">
-<h2 class="section-header">Result list <small>(unsorted)</small></h2>
+<h2>Result list <small>(unsorted)</small></h2>
 {% if removed %}
 <div class="list-note"><div class="bubble">
     The following common word{{ removed|length|pluralize:" was,s were" }} not included in your query:
