--- a/trunk/mobile_portal/mobile_portal/templates/z3950/search_form.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/z3950/search_form.xhtml
@@ -1,5 +1,5 @@
 <div class="section">
-    <h2 class="section-header">Search</h2>
+    <h2>Search</h2>
     <div class="note"><div class="bubble pad-10">
         Search OLIS by either some subset of title and author, or by ISBN.
 {% if not device.has_qwerty_keyboard %} You may use a '*' in place of an 'X' in an ISBN.{% endif %}
