--- a/trunk/mobile_portal/mobile_portal/templates/contact/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/contact/index.xhtml
@@ -23,7 +23,7 @@
 <div class="section">
   <div class="search">	
   <form method="get" action=".">
-    <h2 class="section-header">
+    <h2>
       <label for="id_query">Search</label>
     </h2>
 	<p>
@@ -39,7 +39,7 @@
 
 {% if query %}
 	<div class="section">
-	  <h2 class="section-header">Results</h2>
+	  <h2>Results</h2>
 	  {% if message %}
 		  <div class="bubble"><div class="note pad-10">
 		   	 {{ message }}
@@ -115,7 +115,7 @@
 
 {% if not query %}
 	<div class="section">
-	<h2 class="section-header">University contacts</h2>
+	<h2>University contacts</h2>
 	<ul>
 	    <li><a class="phone" href="tel:+441865270000">General enquiries<br /><small>01865 (2)70000</small></a></li>
 	    <li><a class="phone" href="tel:+441865280000">Switchboard<br /><small>01865 (2)80000</small></a></li>
@@ -124,7 +124,7 @@
 	</div>
 
 	<div class="section">
-	<h2 class="section-header">Emergency contacts</h2>
+	<h2>Emergency contacts</h2>
 	<ul>
 	    <li><a class="phone" href="tel:112">Emergency services<br /><small>112</small></a></li>
 	    <li><a class="phone" href="tel:+441865289999">University security <small>(emergency)<br />01865 (2)89999</small></a></li>
@@ -134,7 +134,7 @@
 	</div>
 
 	<div class="section">
-	<h2 class="section-header">Health and welfare</h2>
+	<h2>Health and welfare</h2>
 	<ul>
 	    <li><a class="phone" href="tel:+448454647">NHS Direct<br /><small>0845 46 47</small></a></li>
 	    <li><a class="phone" href="tel:+441865270300">Counselling Service<br /><small>01865 (2)70300</small></a></li>
@@ -147,7 +147,7 @@
 			{% comment %}  
 			{# Update to retrieve College/Department contacts #}
 			<div class="section">
-			<h2 class="section-header">Other contacts</h2>
+			<h2>Other contacts</h2>
 			<ul>
 			    <li class="email"><a href="{% url contact_quick %}">College contacts</a></li>
 			    <li><a href="{% url contact_quick %}">Department contacts</a></li>
