--- a/trunk/mobile_portal/mobile_portal/templates/core/update_location_confirm.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/update_location_confirm.xhtml
@@ -1,7 +1,7 @@
 
 <div class="list-section">
 
-<h2 class="section-header">Did you mean:</h2>
+<h2>Did you mean:</h2>
 
 {% if map_hash %}
 <div class="backgrounded-image" style="background-image:url('{% url osm_generated_map map_hash %}'); height:{{ map_height|default:device.max_image_height }}px">
