--- a/trunk/mobile_portal/mobile_portal/templates/maps/category_list.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/category_list.xhtml
@@ -13,7 +13,7 @@
 {% block content %}
 
 <div class="section">
-  <h2 class="section-header">Public</h2>
+  <h2>Public</h2>
 	<ul>
 	{% for entity_type in public %}
 	    <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{% url maps_category_detail entity_type.slug %}">{{ entity_type.verbose_name_plural|capfirst }}</a></li>
@@ -22,7 +22,7 @@
 </div>
 
 <div class="section">
-  <h2 class="section-header">University of Oxford</h2>
+  <h2>University of Oxford</h2>
 	<ul>
 	{% for entity_type in university %}
 	    <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{% url maps_category_detail entity_type.slug %}">{{ entity_type.verbose_name_plural|capfirst }}</a></li>
