--- a/trunk/mobile_portal/mobile_portal/templates/maps/entity_without_location.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/entity_without_location.xhtml
@@ -17,7 +17,7 @@
 {% block content %}
 
 <div class="section">
-  <h2 class="section-header">{{ entity_type.verbose_name_plural }} near {{ entity.title }}</h2>
+  <h2>{{ entity_type.verbose_name_plural }} near {{ entity.title }}</h2>
   <div class="note"><div class="bubble pad-10">
     Unfortunately, we do not have a location for this object, and so cannot tell you what is near it.
   </div>
