--- a/trunk/mobile_portal/mobile_portal/templates/maps/nearby_list.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/nearby_list.xhtml
@@ -15,9 +15,9 @@
 
 <div class="section">
 	{% if entity %}
-		<h2 class="section-header">Find things near {{ entity.title }}</h2>
+		<h2>Find things near {{ entity.title }}</h2>
 		{% else %}
-		<h2 class="section-header">Find things nearby</h2>
+		<h2>Find things nearby</h2>
 		<div class="note">
 		{% if preferences.location.location %}
 			<div class="bubble pad-10">
@@ -30,7 +30,7 @@
 </div>
 
 <div class="section">
-  <h2 class="section-header">Public</h2>
+  <h2>Public</h2>
 	<ul>
 	{% for entity_type in public %}{% if entity %}
 	    <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{% url maps_entity_nearby_detail entity.entity_type.slug,entity.display_id,entity_type.slug %}">{{ entity_type.verbose_name_plural|capfirst }}</a></li>
@@ -41,7 +41,7 @@
 </div>
 
 <div class="section">
-  <h2 class="section-header">University of Oxford</h2>
+  <h2>University of Oxford</h2>
 	<ul>
 	{% for entity_type in university %}{% if entity %}
 	    <li{% if forloop.last %} class="round-bottom"{% endif %}><a href="{% url maps_entity_nearby_detail entity.entity_type.slug,entity.display_id,entity_type.slug %}">{{ entity_type.verbose_name_plural|capfirst }}</a></li>
