--- a/trunk/mobile_portal/mobile_portal/templates/podcasts/category_detail.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/podcasts/category_detail.xhtml
@@ -14,7 +14,7 @@
 
 
 <div class="section">
-	<h2 class="section-header">{{ category.name }}</h2>
+	<h2>{{ category.name }}</h2>
     <div class="note"><div class="bubble pad-10">
     Show
     <a href="{% url podcasts_category_medium category.code,"audio" %}">audio</a>
