--- a/trunk/mobile_portal/mobile_portal/templates/podcasts/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/podcasts/index.xhtml
@@ -29,7 +29,7 @@
 <div class="section">
 <div class="search">
 	<form method="get" action="{% url googlesearch_index %}">
-		<h2 class="section-header">Podcasts Search</h2>
+		<h2>Podcasts Search</h2>
   		<p>
 			{{ search_form.query }}
 			<input type="hidden" name="application" value="podcasts">
@@ -46,7 +46,7 @@
 
 
 <div class="section" >
-	<h2 class="section-header">By category</h2>
+	<h2>By category</h2>
 <ul>
 {% for category in categories %}
     <li {% if forloop.last %}class="round-bottom" {% endif %}>
