--- a/trunk/mobile_portal/mobile_portal/templates/podcasts/podcast_detail.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/podcasts/podcast_detail.xhtml
@@ -21,7 +21,7 @@
 {% block content %}
 
 <div class="section-nopad">
-    <h2 class="section-header">{{ podcast.title }}</h2>
+    <h2>{{ podcast.title }}</h2>
     
     <div class="section-content">{{ podcast.description|safe }}</div>
 </div>
@@ -29,7 +29,7 @@
 {% for item in items %}
 
 <div class="section-nopad">
-    <h3 class="section-header">{{ item.title }}</h3>
+    <h3>{{ item.title }}</h3>
     
     <table class="section-table">
         <tbody>
