--- a/trunk/mobile_portal/mobile_portal/templates/rss/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/rss/index.xhtml
@@ -7,7 +7,7 @@
 {% block content %}
 
 <div class="section">
-    <h2 class="section-header">Feeds</h2>
+    <h2>Feeds</h2>
     <ul>
 {% for feed in feeds %}
         <li {% if forloop.last %}class="round-bottom"{% endif %}>
