--- a/trunk/mobile_portal/mobile_portal/templates/rss/item_detail.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/rss/item_detail.xhtml
@@ -16,7 +16,7 @@
 {% block content %}
 
 <div class="section">
-    <h2 class="section-header">{{ item.title }}</h2>
+    <h2>{{ item.title }}</h2>
     
     <div class="article"><div class="bubble pad-10">
         {{ description|safe }}
