--- a/trunk/mobile_portal/mobile_portal/templates/rss/item_list.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/rss/item_list.xhtml
@@ -13,7 +13,7 @@
 {% block content %}
 
 <div class="section">
-    <h2 class="section-header">{{ feed.title }}</h2>
+    <h2>{{ feed.title }}</h2>
     
     <ul>
 {% for item in feed.rssitem_set.all %}
