--- a/trunk/mobile_portal/mobile_portal/templates/static/about.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/static/about.xhtml
@@ -1,5 +1,5 @@
 <div class="section">
-    <h2 class="section-header">About this site</h2>
+    <h2>About this site</h2>
 
     <div class="note"><div class="bubble pad-10">
     Mobile Oxford was produced as part of the
@@ -13,7 +13,7 @@
 </div>
 
 <div class="section">
-    <h2 class="section-header">Credits</h2>
+    <h2>Credits</h2>
     <div class="note"><div class="bubble pad-10">
         <p>
         The Erewhon team would like to thank the following organisations
@@ -37,8 +37,8 @@
 </div>
 
 <div class="section">
-	<h2 class="section-header">Be aware</h2>
+	<h2>Be aware</h2>
 	<div class="note"><div class="bubble pad-10">
 		<p>
-			Please note that using Mobile Oxford may incur a cost of data transmission from your network provider. Many providers now offer "unlimited" day, week or month passes, please check with your network provider for more information.</p>
+			Using Mobile Oxford may incur a cost of data transmission from your network provider. Many providers now offer "unlimited" day, week or month passes, please check with your provider for more information.</p>
 </div></div></div>
