--- a/trunk/mobile_portal/mobile_portal/templates/weather/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/weather/index.xhtml
@@ -8,7 +8,7 @@
 {% block content %}
 
 <div class="section">
-	<h2 class="section-header">Oxford at {{ weather.observed_date|date:"H:m" }}</h2>
+	<h2>Oxford at {{ weather.observed_date|date:"H:m" }}</h2>
 	<div class="note">
 		<div class="weather-icon">
 	    <img src="{{ MEDIA_URL }}png/weather/{{ weather.icon }}.png" alt="{{ weather.get_outlook_display|capfirst }}"/><br/>
@@ -26,7 +26,7 @@
 </div>
 	
 <div class="section">
-    <h2 class="section-header">Forecast</h2>
+    <h2>Forecast</h2>
     <table class="weather-forecast">
         <tbody>
 {% for forecast in forecasts %}
