--- a/trunk/mobile_portal/mobile_portal/templates/webcams/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/webcams/index.xhtml
@@ -8,7 +8,7 @@
 
 
 <div class="section">
-	<h2 class="section-header">Webcams</h2>
+	<h2>Webcams</h2>
 		<ul>
 {% for webcam in webcams %}
 		<li {% if forloop.last %}class="round-bottom"{% endif %}>
