--- a/trunk/mobile_portal/mobile_portal/templates/contact/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/contact/index.xhtml
@@ -21,7 +21,7 @@
 
 {% block content %}
 <div class="section">
-  <div class="search">	
+  <div class="form">	
   <form method="get" action=".">
     <h2>
       <label for="id_query">Search</label>
