--- a/trunk/mobile_portal/mobile_portal/templates/maps/busstop_search.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/busstop_search.xhtml
@@ -33,7 +33,7 @@
 {% endif %}
 
 <div class="section">
-	<div class="search">
+	<div class="form">
   <form method="get" action=".">
     <h2>
       {{ search_form.id.label }}
