--- a/trunk/mobile_portal/mobile_portal/templates/podcasts/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/podcasts/index.xhtml
@@ -27,7 +27,7 @@
 
 
 <div class="section">
-<div class="search">
+<div class="form">
 	<form method="get" action="{% url googlesearch_index %}">
 		<h2>Podcasts Search</h2>
   		<p>
