--- a/trunk/mobile_portal/mobile_portal/templates/core/contact.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/contact.xhtml
@@ -7,14 +7,14 @@
 {% block content %}
 
 {% if sent %}
-<div class="section">
-  <p>Thank you for your feedback!</p>
-{% if referer %}
-  <p>You may wish to go <a href="{{ referer }}">back from whence you came</a>.</p>
-{% else %}
-  <p>You may wish to go <a href="{% url core_index %}">back to the beginning</a>.</p>
-{% endif %}
-</div>
+	<div class="section">
+	  <p>Thank you for your feedback!</p>
+	{% if referer %}
+	  <p>You may wish to go <a href="{{ referer }}">back from whence you came</a>.</p>
+	{% else %}
+	  <p>You may wish to go <a href="{% url core_index %}">back to the beginning</a>.</p>
+	{% endif %}
+	</div>
 {% endif %}
 
 
@@ -22,21 +22,16 @@
 <input type="hidden" name="referer" value="{{ referer }}"/>
 
 <div class="section">
-
-  <dl class="form">
-    <dt>{{ contact_form.email.label}}:</dt>
-{% if contact_form.email.errors %}
-    <dd>{{ contact_form.email.errors.0 }}</dd>
-{% endif %}    <dd>{{ contact_form.email }}</dd>
-    <dt>{{ contact_form.body.label}}:</dt>
-    <dd>{{ contact_form.body }}</dd>
-  </dl>
-  <p>
-    <input type="submit" value="Submit"/>
-  </p>
+	<div class="form">
+	<h3>{{ contact_form.email.label}}</h3>
+	{% if contact_form.email.errors %}
+	    <p>{{ contact_form.email.errors.0 }}</p>
+	{% endif %}  <p>{{ contact_form.email }}</p>
+	<h3>{{ contact_form.body.label}}</h3>
+	<p>{{ contact_form.body }}</p>
+	<p><input type="submit" value="Submit" /></p>
+	</div>
 </div>
-
-
 
 </form>
 
