--- a/trunk/mobile_portal/mobile_portal/templates/maps/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/maps/index.xhtml
@@ -26,7 +26,7 @@
 
 {# Maps Search #}
 <div class="section">
-<div class="search">
+<div class="form">
 	<form method="get" action="{% url googlesearch_index %}">
 		<h2>Search for Places</h2>
   		<p>
@@ -53,7 +53,7 @@
 
 {# Bus Stop Search #}
 <div class="section">
-	<div class="search">
+	<div class="form">
 		<form method="get" action="{% url maps_busstop_search %}">
     		<h2>Bus Stop Search</h2>
     		<div class="note"><div class="bubble pad-10">
