--- a/trunk/mobile_portal/mobile_portal/templates/rss/item_detail.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/rss/item_detail.xhtml
@@ -16,10 +16,15 @@
 {% block content %}
 
 <div class="section">
-    <h2>{{ item.title }}</h2>
+    <h3>{{ item.title }}</h3>
     
-    <div class="article"><div class="bubble pad-10">
+    <div class="article"><div class="bubble pad-5" style="margin: 2px;">
         {{ description|safe }}
+        <br />
+        <small><em>
+            {{ item.last_modified_local|date:"j M Y \a\t H:m" }}<br />
+            Link: <a href="{{ item.link }}" title="{{ item.title }}">{{ item.link }}</a>
+        </em></small>
     </div></div>
 </div>
 
