--- a/trunk/mobile_portal/mobile_portal/templates/webcams/webcam_detail.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/webcams/webcam_detail.xhtml
@@ -37,12 +37,12 @@
 
 
 
-<div class="list-footer">
+<div class="note"><div class="bubble pad-5">
 <p><small>{{ webcam.description }}</small></p>
 
 {% if webcam.credit %}
 <p><small>{{ webcam.credit|safe }}</small></p>
 {% endif %}
 
-</div></div>
+</div></div></div>
 {% endblock %}
