--- a/trunk/mobile_portal/mobile_portal/templates/rss/item_list.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/rss/item_list.xhtml
@@ -17,17 +17,16 @@
     
     <ul>
 {% for item in feed.rssitem_set.all %}
-        <li>
+        <li {% if forloop.last %}class="round-bottom"{% endif %}>
             <a href="{{ item.get_absolute_url }}">
+                {{ item.title }}<br />
                 <small><em>
                 {% if not item.last_modified_local|this_year %}
                     {{ item.last_modified_local|date:"j M Y \a\t H:m" }}
                 {% else %}
                     {{ item.last_modified_local|date:"j M"}}
                 {% endif %}
-                
                 </em></small>
-                <br />{{ item.title }}
                 
             </a>
         </li>
