--- a/trunk/mobile_portal/mobile_portal/templates/core/index.xhtml
+++ b/trunk/mobile_portal/mobile_portal/templates/core/index.xhtml
@@ -45,7 +45,7 @@
 			{% if has_user_messages %}
             <li><a href="{% url core_messages %}">Read messages from the developers</a></li>
 			{% endif %}
-            <li class="round-bottom"><a href="{% url core_contact %}?referer={% url core_index %}">Provide feedback</a></li>
+            <li class="round-bottom"><a href="{% url core_feedback %}?referer={% url core_index %}">Provide feedback</a></li>
     </ul>
     <div class="center">
     <div class="bubble" style="padding:8px;">
